unpackaged/main/default/objects/Transaction_Setup__mdt/Transaction_Setup__mdt.object-meta.xml
<CustomObject>
    <label>Transaction Setup</label>
    <pluralLabel>Transactions Setup</pluralLabel>
</CustomObject>