unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Aggregate_Operation__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Operation__c</fullName>
    <label>Aggregate Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>