unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Aggregate_Result_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Result_Field__c</fullName>
    <label>Aggregate Result Field</label>
    <metadataRelationshipControllingField>Transaction_Setup__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Transactions_Setup</relationshipLabel>
    <relationshipName>Transactions_Setup</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>