unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Transactions_Setup1</relationshipLabel>
    <relationshipName>Transactions_Setup1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>