unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Field_to_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Aggregate__c</fullName>
    <label>Field to Aggregate</label>
    <metadataRelationshipControllingField>Transaction_Setup__mdt.Child_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Transactions_Setup1</relationshipLabel>
    <relationshipName>Transactions_Setup1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>