unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Transactions_Setup</relationshipLabel>
    <relationshipName>Transactions_Setup</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>