unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Relationship_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Criteria__c</fullName>
    <label>Relationship Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>