unpackaged/main/default/objects/Transaction_Setup__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <label>Relationship Field</label>
    <metadataRelationshipControllingField>Transaction_Setup__mdt.Child_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Transactions_Setup2</relationshipLabel>
    <relationshipName>Transactions_Setup2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>